--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
         <div class="header-part">
             <a href="https://sangitasarkar74.github.io/https---github.com-sangitasarkar74-New-project-art/">Home</a>
-            <a href="http://127.0.0.1:5500/about.html">About</a>
-            <a href="http://127.0.0.1:5500/paintings.html">Paintings</a>
-            <a href="http://127.0.0.1:5500/contact.html" id="My-class">Contact</a>
+            <a href="">About</a>
+            <a href="">Paintings</a>
+            <a href="" id="My-class">Contact</a>
         </div>
 
     </header>
